src/test/ui/resolve/issue-23716.stderr
error[E0658]: referencing statics in patterns is experimental
  --> $DIR/issue-23716.rs:3:8
   |
LL | fn bar(foo: i32) {}
   |        ^^^
   |
   = help: add `#![feature(static_in_pattern)]` to the crate attributes to enable

error[E0658]: referencing statics in patterns is experimental
  --> $DIR/issue-23716.rs:12:13
   |
LL | fn question(answer: i32) {}
   |             ^^^^^^
   |
   = help: add `#![feature(static_in_pattern)]` to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
